css product styles and settings edit

--- a/product.html
+++ b/product.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="products.html">Products</a>
@@ -48,7 +48,7 @@
                 </div>
             </nav>
 
-            <div class="container">
+            <div class="container-fluid">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Products</a></li>
@@ -63,26 +63,34 @@
                         <button type="button" class="btn btn-primary">Tag 3</button>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md">
-                      <p>
-                        Morbi elementum ullamcorper suscipit. Duis mattis convallis nisi, a ornare erat laoreet id. Sed tincidunt pharetra nulla, at volutpat ligula placerat a. Integer eget nunc nunc. 
-                    </p> 
-                    <p>
-                        Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci, sollicitudin in luctus a, varius eget massa. Morbi libero ipsum, semper a ultricies sed, tempor lacinia enim. Suspendisse quis efficitur lectus. Praesent pulvinar placerat felis vitae faucibus. Nullam et vestibulum velit.
-                    </p>
-                     
+                <div class="container-fluid details-container">
+                    <div class="container-fluid image-wrap">
+                        <img src="images/products/product-detail.jpg" class="img-fluid" alt="product detail image">
+                        <p class="img-text">Donec eget condimentum mauris. In hac habitasse platea dictumst.</p>
                     </div>
-                    <div class="col-md">
-                        <ul class="list-group">
-                            <li class="list-group-item">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                        </ul>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md">
+                            <p>
+                                Morbi elementum ullamcorper suscipit. Duis mattis convallis nisi, a ornare erat laoreet id. Sed tincidunt pharetra nulla, at volutpat ligula placerat a. Integer eget nunc nunc. 
+                            </p> 
+                            <p>
+                                Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci, sollicitudin in luctus a, varius eget massa. Morbi libero ipsum, semper a ultricies sed, tempor lacinia enim. Suspendisse quis efficitur lectus. Praesent pulvinar placerat felis vitae faucibus. Nullam et vestibulum velit.
+                            </p>
+                            
+                            </div>
+                            <div class="col-md">
+                                <ul class="list-group">
+                                    <li class="list-group-item">Cras justo odio</li>
+                                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                                    <li class="list-group-item">Morbi leo risus</li>
+                                    <li class="list-group-item">Cras justo odio</li>
+                                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                                    <li class="list-group-item">Morbi leo risus</li>
+                                    <li class="list-group-item">Morbi leo risus</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
