css edits products

--- a/product.html
+++ b/product.html
@@ -48,7 +48,7 @@
                 </div>
             </nav>
 
-            <div class="container-fluid">
+            <div class="container-fluid main-content-wrap">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Products</a></li>
@@ -71,6 +71,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md">
+                                <h5>Sed tincidunt pharetra nulla</h5>
                             <p>
                                 Morbi elementum ullamcorper suscipit. Duis mattis convallis nisi, a ornare erat laoreet id. Sed tincidunt pharetra nulla, at volutpat ligula placerat a. Integer eget nunc nunc. 
                             </p> 
@@ -83,10 +84,6 @@
                                 <ul class="list-group">
                                     <li class="list-group-item">Cras justo odio</li>
                                     <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
                                     <li class="list-group-item">Morbi leo risus</li>
                                 </ul>
                             </div>
