--- a/product.html
+++ b/product.html
@@ -83,7 +83,7 @@
                             <div class="col-md">
                                 <ul class="list-group">
                                     <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                                    <li class="list-group-item"><i class="fas fa-rocket"></i> Dapibus ac facilisis in</li>
                                     <li class="list-group-item">Morbi leo risus</li>
                                 </ul>
                             </div>
