--- a/product.html
+++ b/product.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"
         />
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/62db01abf1.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&family=Julius+Sans+One&display=swap" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
     </head>
@@ -72,19 +73,19 @@
                         <div class="row">
                             <div class="col-md">
                                 <h5>Sed tincidunt pharetra nulla</h5>
-                            <p>
-                                Morbi elementum ullamcorper suscipit. Duis mattis convallis nisi, a ornare erat laoreet id. Sed tincidunt pharetra nulla, at volutpat ligula placerat a. Integer eget nunc nunc. 
-                            </p> 
-                            <p>
-                                Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci, sollicitudin in luctus a, varius eget massa. Morbi libero ipsum, semper a ultricies sed, tempor lacinia enim. Suspendisse quis efficitur lectus. Praesent pulvinar placerat felis vitae faucibus. Nullam et vestibulum velit.
-                            </p>
-                            
+                                <p>
+                                    Morbi elementum ullamcorper suscipit. Duis mattis convallis nisi, a ornare erat laoreet id. Sed tincidunt pharetra nulla, at volutpat ligula placerat a. Integer eget nunc nunc. 
+                                </p> 
+                                <p>
+                                    Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci, sollicitudin in luctus a, varius eget massa. Morbi libero ipsum, semper a ultricies sed, tempor lacinia enim. Suspendisse quis efficitur lectus. Praesent pulvinar placerat felis vitae faucibus. Nullam et vestibulum velit.
+                                </p>
                             </div>
-                            <div class="col-md">
+                            <div class="col-md col-list">
                                 <ul class="list-group">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item"><i class="fas fa-rocket"></i> Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
+                                    <li class="list-group-item"><i class="fas fa-tag"></i> Cras justo odio</li>
+                                    <li class="list-group-item"><i class="fas fa-rocket"></i> Donec eget condimentum
+                                        mauris. In hac habitasse.</li>
+                                    <li class="list-group-item"><i class="far fa-circle"></i> Morbi leo risus</li>
                                 </ul>
                             </div>
                         </div>
